--- a/app/src/main/res/layout/salesdailog.xml
+++ b/app/src/main/res/layout/salesdailog.xml
@@ -4,8 +4,18 @@
     android:layout_width="300dp"
     android:orientation="vertical"
 
-    android:background="@drawable/back_border_shape3"
+    android:background="@color/white"
     android:layout_height="200dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="@color/primaryTextColor"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical">
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -147,7 +157,7 @@ android:background="@color/layer7"
             android:background="@drawable/background_container"
             android:layout_width="match_parent"
             android:layout_weight="1"
-
+android:inputType="number"
             android:padding="2dp"
             android:textColor="@color/black"
             android:textSize="11sp"
@@ -187,6 +197,7 @@ android:inputType="number"
             android:padding="2dp"
             android:textColor="@color/black"
             android:textSize="11sp"
+
             android:layout_height="match_parent"/>
 
     </LinearLayout>
@@ -263,5 +274,5 @@ android:text="@string/save"
     </LinearLayout>
 
 
-
+    </LinearLayout>
 </LinearLayout>
