--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:id="@+id/main_title"
                 android:layout_width="wrap_content"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/logo_remove"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="35dp"
@@ -35,12 +35,13 @@
                 android:lineHeight="41sp"
                 android:text="@string/sign_in"
                 android:textColor="#000000"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:layout_marginTop="6dp"/>
 
             <TextView
                 android:id="@+id/subtitle"
                 android:layout_width="306dp"
-                android:layout_height="52dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/main_title"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="35dp"
@@ -49,7 +50,8 @@
                 android:lineHeight="26sp"
                 android:text="@string/sign_in_with"
                 android:textColor="#B3000000"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                android:layout_marginTop="3dp"/>
 
             <TextView
                 android:id="@+id/errorMsg"
@@ -172,7 +174,7 @@
                 android:layout_below="@+id/loginBtn"
                 android:layout_alignParentStart="true"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="5dp"
+                android:layout_margin="11dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
