--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -66,12 +66,12 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.91" />
+            app:layout_constraintGuide_percent="0.92" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/expandBtn"
-            android:layout_width="29dp"
-            android:layout_height="29dp"
+            android:layout_width="31dp"
+            android:layout_height="31dp"
             android:layout_marginEnd="5dp"
             android:clickable="true"
             android:elevation="5dp"
@@ -112,7 +112,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/itemCard2"
             android:layout_width="match_parent"
-            android:layout_height="420dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
@@ -178,7 +178,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -217,7 +217,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -257,7 +257,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -297,7 +297,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -337,7 +337,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -377,7 +377,7 @@
                             android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -430,7 +430,7 @@
                             android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="number"
@@ -468,7 +468,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="90dp"
+                            android:layout_marginStart="100dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
                             android:inputType="text"
