--- a/app/src/main/res/layout/splashfile.xml
+++ b/app/src/main/res/layout/splashfile.xml
@@ -19,12 +19,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo_id"
         android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="50dp"
         android:layout_marginTop="-32dp"
         android:fontFamily="@font/alegreya_medium"
         android:gravity="center_horizontal|top"
         android:lineHeight="33sp"
-        android:text="Welcome to your Favorite Building store"
+        android:text="Welcome to your Favorite\nBuilding store"
         android:textColor="@color/primaryTextColor"
         android:textFontWeight="500"
         android:textSize="24sp" />
