--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -154,6 +154,8 @@
                 android:layout_marginHorizontal="27dp"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/bg_btn"
+                android:fontFamily="@font/alegreya_sans_medium"
+                android:letterSpacing="0.08"
                 android:padding="15dp"
                 android:text="@string/loginTitle"
                 android:textColor="@color/white"
@@ -161,9 +163,7 @@
                 app:initialCornerAngle="27dp"
                 app:spinning_bar_color="@color/white"
                 app:spinning_bar_padding="6dp"
-                app:spinning_bar_width="4dp"
-                android:fontFamily="@font/alegreya_sans_medium"
-                android:letterSpacing="0.08"/>
+                app:spinning_bar_width="4dp" />
 
             <LinearLayout
                 android:id="@+id/request_ip_"
