--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,13 +42,30 @@
         </LinearLayout>
     </ScrollView>
 
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
     <include
         layout="@layout/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:textColor="@color/red"
+        android:layout_marginStart="35dp"
+        android:id="@+id/itemcount"
+        android:layout_marginBottom="18dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        />
+<!--    </RelativeLayout>-->
 
-
-</RelativeLayout><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+</RelativeLayout>
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
     <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
     <!--    xmlns:tools="http://schemas.android.com/tools"-->
     <!--    android:layout_width="match_parent"-->
