--- a/app/src/main/res/layout/itemrow.xml
+++ b/app/src/main/res/layout/itemrow.xml
@@ -85,7 +85,7 @@
 
                             android:layout_width="match_parent"
                             android:textSize="11sp"
-                            android:text="@string/itemName"
+                            android:text="@string/item_name"
                             android:padding="1dp"
                             android:textColor="@color/purple_500"
                             android:layout_height="wrap_content"/>
