--- a/app/src/main/res/layout/orders_basket.xml
+++ b/app/src/main/res/layout/orders_basket.xml
@@ -48,6 +48,12 @@
         android:layout_marginTop="44dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="4dp">
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+
+            android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,35 +67,68 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
+                    android:textSize="14sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/alegreya"
                     android:gravity="start"
                     android:lineHeight="19sp"
-                    android:text="@string/item_Name_"
+                    android:text="@string/item_Code"
                     android:textColor="@color/primaryTextColor"
-                    android:textSize="14sp" />
+                    />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/alegreya"
                     android:gravity="center"
                     android:lineHeight="19sp"
-                    android:text="@string/item_Code"
+                    android:text="@string/item_Name_"
+
                     android:textColor="@color/primaryTextColor"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/alegreya"
                     android:gravity="end"
                     android:lineHeight="19sp"
                     android:text="@string/qty"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/alegreya"
+                    android:gravity="end"
+                    android:lineHeight="19sp"
+                    android:text="@string/price_"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp" />
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/alegreya"
+                    android:gravity="end"
+                    android:lineHeight="19sp"
+                    android:text="@string/discount_"
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="14sp" />
+                <TextView
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/alegreya"
+                    android:gravity="end"
+                    android:lineHeight="19sp"
+                    android:text="@string/tax_"
                     android:textColor="@color/primaryTextColor"
                     android:textSize="14sp" />
 
@@ -108,7 +147,7 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         </LinearLayout>
-
+        </HorizontalScrollView>
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -126,7 +165,7 @@
         android:letterSpacing="0.08"
         android:lineHeight="30sp"
         android:padding="15dp"
-        android:text="Order"
+        android:text="@string/Order"
         android:textColor="@color/white"
         android:textSize="25sp" />
 
