--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -2,30 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3"
         android:layout_margin="2dp"
-        android:orientation="vertical"
-        >
+        android:layout_weight="3"
+        android:orientation="vertical">
+
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:orientation="horizontal">
 
-            <TextView
-
-                android:id="@+id/itemNCode"
-                android:layout_width="150dp"
-                android:textSize="14sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/alegreya"
-                android:gravity="start"
-                android:lineHeight="19sp"
-                android:text="@string/item_Code"
-                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="150dp"
@@ -35,9 +24,24 @@
                 android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/item_Name_"
-                android:textSize="14sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
             <TextView
+
+                android:id="@+id/itemNCode"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/alegreya"
+                android:gravity="start"
+                android:lineHeight="19sp"
+                android:text="@string/item_Code"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/qty"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -45,10 +49,11 @@
                 android:gravity="end"
                 android:lineHeight="19sp"
                 android:text="@string/qty"
-                  android:textSize="14sp"
-                android:id="@+id/qty"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
             <TextView
+                android:id="@+id/price"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -56,10 +61,9 @@
                 android:gravity="end"
                 android:lineHeight="19sp"
                 android:text="@string/price_"
-                 android:textSize="14sp"
-                android:id="@+id/price"
+                android:textColor="@color/black"
 
-                android:textColor="@color/black"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/discount"
@@ -70,8 +74,9 @@
                 android:gravity="end"
                 android:lineHeight="19sp"
                 android:text="@string/discount_"
-                  android:textSize="14sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/taxx"
                 android:layout_width="150dp"
@@ -81,8 +86,8 @@
                 android:gravity="end"
                 android:lineHeight="19sp"
                 android:text="@string/tax_"
-                   android:textSize="14sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
         </LinearLayout>
     </LinearLayout>
