--- a/app/src/main/res/layout/activity_add_new_customer.xml
+++ b/app/src/main/res/layout/activity_add_new_customer.xml
@@ -153,5 +153,10 @@
 
     </LinearLayout>
 
+    <include
+        android:id="@+id/bottom_navigation"
+        layout="@layout/bottom_nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
