--- a/app/src/main/res/layout/activity_show_previous_order.xml
+++ b/app/src/main/res/layout/activity_show_previous_order.xml
@@ -1,174 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/main_bg"
+    android:orientation="vertical"
     tools:context=".Activities.ShowPreviousOrder">
 
     <ImageView
         android:id="@+id/logo_remove"
         android:layout_width="74dp"
         android:layout_height="62dp"
-android:layout_gravity="center"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
 
         android:background="@drawable/logo" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_weight="6"
-    android:padding="2dp"
-    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_weight="7"
-        android:orientation="horizontal">
+        android:layout_weight="6"
+        android:orientation="vertical"
+        android:padding="2dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:text="@string/VoHNO"
-            android:layout_weight="2"
-            android:textStyle="bold"
-            android:padding="4dp"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="14sp" />
+            android:layout_marginTop="5dp"
+            android:layout_weight="7"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/ORDERNO"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="2"
+                android:padding="4dp"
+                android:text="@string/VoHNO"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/ORDERNO"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/edtstyle"
+                android:gravity="center"
+
+                android:inputType="date"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_weight="7"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="2"
+                android:gravity="center|left"
+                android:padding="4dp"
+                android:text="@string/customerName"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/Cus_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:inputType="date"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="date"
-            android:layout_gravity="center"
-            android:layout_marginEnd="8dp"
-            android:gravity="center"
+            android:orientation="horizontal">
 
-            android:background="@drawable/edtstyle"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-           />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+
+                android:padding="4dp"
+                android:text="@string/date"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/SH_date"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:inputType="date"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:drawableStartCompat="@drawable/ic_date_range_black_24dp" />
+
+
+            <Button
+                android:id="@+id/preview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="4dp"
+                android:layout_weight="1"
+                android:background="@color/black"
+                android:drawableEnd="@drawable/ic_baseline_filter_alt_24"
+                android:text="@string/preview"
+                android:textColor="@color/white"
+
+                android:textSize="13sp" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
-    <LinearLayout
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+        android:background="@color/primaryTextColor" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+
+        />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ordersRec"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_weight="7"
-        android:orientation="horizontal">
+        android:layout_weight="2" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:text="@string/customerName"
-            android:layout_weight="2"
-            android:gravity="center|left"
-            android:textStyle="bold"
-            android:padding="4dp"
-            android:textColor="@color/primaryTextColor"
-            android:textSize="14sp" />
-
-        <Spinner
-            android:id="@+id/Cus_name"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="date"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            />
-
-
-
-    </LinearLayout>
-    <LinearLayout
+    <include
+        android:id="@+id/bottom_navigation"
+        layout="@layout/bottom_nav_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:text="@string/date"
-
-            android:layout_weight="1"
-            android:textStyle="bold"
-           android:padding="4dp"
-             android:textColor="@color/primaryTextColor"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/SH_date"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="date"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_date_range_black_24dp" />
-
-
-
-        <Button
-            android:id="@+id/preview"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="13sp"
-            android:layout_marginEnd="4dp"
-            android:drawableEnd="@drawable/ic_baseline_filter_alt_24"
-            android:background="@color/black"
-            android:text="@string/preview"
-
-            android:textColor="@color/white" />
-
-
-    </LinearLayout>
-
-</LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="7dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
-
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="7dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
-        android:background="@color/primaryTextColor"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="7dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
-
-        />
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:id="@+id/ordersRec"
-            android:layout_height="match_parent"
-            android:layout_weight="2"/>
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
