--- a/app/src/main/res/layout/adddailog.xml
+++ b/app/src/main/res/layout/adddailog.xml
@@ -1,63 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="100dp">
-    <View
+    android:padding="10dp">
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="5dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="2.2"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="5dp">
 
-    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-        android:id="@+id/addCustomer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-
-        android:background="@drawable/bg_btn"
-        android:fontFamily="@font/alegreya_sans_medium"
-        android:letterSpacing="0.08"
-
-        android:text="@string/addnewcustomer"
-        android:textColor="@color/white"
-        android:textSize="15sp"
-
-        />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"/>
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="2.2"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
-            android:layout_height="match_parent">
+            android:padding="10dp">
 
-        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
-        android:id="@+id/adduser"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_weight="2.2"
+                android:orientation="vertical">
 
-        android:background="@drawable/bg_btn"
-        android:fontFamily="@font/alegreya_sans_medium"
-        android:letterSpacing="0.08"
+                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+                    android:id="@+id/addCustomer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-        android:text="@string/addnewuser"
-        android:textColor="@color/white"
-        android:textSize="15sp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_btn"
+                    android:fontFamily="@font/alegreya_sans_medium"
+                    android:letterSpacing="0.08"
 
-        />
+                    android:text="@string/addnewcustomer"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+
+                    />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_weight="2.2"
+                android:orientation="vertical">
+
+                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+                    android:id="@+id/adduser"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:background="@drawable/bg_btn"
+                    android:fontFamily="@font/alegreya_sans_medium"
+                    android:letterSpacing="0.08"
+                    android:text="@string/addnewuser"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+
+                    />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
         </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"/>
+    </com.google.android.material.card.MaterialCardView>
+
+
 </LinearLayout>
