--- a/app/src/main/res/layout/activity_add_new_user.xml
+++ b/app/src/main/res/layout/activity_add_new_user.xml
@@ -30,7 +30,8 @@
         android:layout_marginEnd="30dp"
         android:layout_weight="1"
         android:background="@drawable/containerlayout"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -110,7 +111,8 @@
                 android:background="@drawable/edittextstyle"
                 android:padding="4dp"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
