--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,28 +5,28 @@
         android:id="@+id/action_home"
         android:enabled="true"
         android:icon="@drawable/ic_home_22"
-        android:title="Home"/>
+        android:title="@string/home"/>
 
     <item
         android:id="@+id/action_cart"
         android:enabled="true"
         android:icon="@drawable/cart_ic"
-        android:title="Cart"/>
+        android:title="@string/cart"/>
     <item
         android:id="@+id/action_add"
         android:enabled="true"
         android:icon="@drawable/add_ic"
-        android:title="Add"/>
+        android:title="@string/add"/>
     <item
         android:id="@+id/action_report"
         android:enabled="true"
         android:icon="@drawable/report_ic"
-        android:title="Report"/>
+        android:title="@string/reports"/>
 
     <item
         android:id="@+id/exportdata"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_arrow_circle_up_24"
-        android:title="Export Data"/>
+        android:title="@string/export"/>
 
 </menu>
