--- a/app/src/main/res/layout/activity_order_report.xml
+++ b/app/src/main/res/layout/activity_order_report.xml
@@ -100,6 +100,7 @@ android:layout_marginEnd="4dp"
 
 
 
+
         <Button
             android:id="@+id/Rep_order"
             android:layout_weight="1"
@@ -110,7 +111,15 @@ android:layout_marginEnd="4dp"
             android:background="@color/black"
             android:text="@string/Order"
             android:textColor="@color/white" />
+        <Button
+            android:id="@+id/print_order"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/ic_baseline_print_24"
 
+            android:textColor="@color/white" />
 
     </LinearLayout>
 <HorizontalScrollView
