--- a/app/src/main/res/layout/orders_basket.xml
+++ b/app/src/main/res/layout/orders_basket.xml
@@ -129,18 +129,18 @@
 
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
-                            android:gravity="start"
+                            android:gravity="center"
                             android:lineHeight="19sp"
                             android:text="@string/item_Name_"
                             android:textColor="@color/primaryTextColor"
                             android:textSize="14sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
@@ -156,7 +156,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
-                            android:gravity="end"
+                            android:gravity="center"
                             android:lineHeight="19sp"
                             android:text="@string/qty"
                             android:textColor="@color/primaryTextColor"
@@ -167,7 +167,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
-                            android:gravity="end"
+                            android:gravity="center"
                             android:lineHeight="19sp"
                             android:text="@string/price_"
                             android:textColor="@color/primaryTextColor"
@@ -178,7 +178,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
-                            android:gravity="end"
+                            android:gravity="center"
                             android:lineHeight="19sp"
                             android:text="@string/discount_"
                             android:textColor="@color/primaryTextColor"
@@ -189,7 +189,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:fontFamily="@font/alegreya"
-                            android:gravity="end"
+                            android:gravity="center"
                             android:lineHeight="19sp"
                             android:text="@string/tax_"
                             android:textColor="@color/primaryTextColor"
