--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
-                android:gravity="start"
+                android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/item_Code"
                 android:textColor="@color/black"
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
-                android:gravity="end"
+                android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/qty"
                 android:textColor="@color/black"
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
-                android:gravity="end"
+                android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/price_"
                 android:textColor="@color/black"
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
-                android:gravity="end"
+                android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/discount_"
                 android:textColor="@color/black"
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
-                android:gravity="end"
+                android:gravity="center"
                 android:lineHeight="19sp"
                 android:text="@string/tax_"
                 android:textColor="@color/black"
